# federated_experiments

./: .gitignore  0_XGBoost_tutorial.py  README.md  pyproject.toml
1_flower_quickstart_xgboost/: client.py  main.py  pyproject.toml  server.py
1_flower_quickstart_xgboost/files_from_flower_repo/xgboost_quickstart/: client_app.py
1_flower_quickstart_xgboost/files_with_my_notes/: client.py  main_simulation.py  server.py
Tutorial and Notes/: README.md
Tutorial and Notes/2_flwr_hist_demo/: README.md  pyproject.toml
Tutorial and Notes/2_flwr_hist_demo/certificates/: ca.crt  ca.key  ca.srl  server.csr  server.key  server.pem
Tutorial and Notes/2_flwr_hist_demo/keys/: client_credentials_1  client_credentials_1.pub  client_credentials_2  client_credentials_2.pub  client_public_keys.csv
Tutorial and Notes/2_flwr_hist_demo/pandas_example/: client_app.py  server_app.py
config/: fields_ml.txt  server_config.toml  server_config_hist.toml  server_config_ml.toml
data/: backup.xlsx  original_data.csv
flower_app/: pyproject.toml  server_app.py
flower_app/scripts/: run_hist_app.sh  setup_superlink.sh  support_scripts.py
flower_app_hist/: client_app.py  server_app.py
flower_app_hist/certificates/: ca.crt  ca.key  ca.srl  server.csr  server.key  server.pem
flower_app_hist/data/: original_data.xlsx
flower_app_ml/: client_app.py  pyproject.toml  server_app.py  support.py  support_ml_app.py
flower_app_ml/data/: fields_categorical.txt
flower_apps/1_hist_clinnova/: README.md  pyproject.toml  server_config.toml
flower_apps/1_hist_clinnova/config/: plot_config.toml  server_config.toml
flower_apps/1_hist_clinnova/hist_app/: client_app.py  client_app_ORIGINAL.py  server_app.py  server_app_ORIGINAL.py
flower_apps/1_hist_clinnova/scripts/: plot_results.py  prepare_data.py  run_hist_app.sh
other_scripts/: README.md  prepare_data.py  run_hist_app.sh  run_ml_app.sh  setup_supernode.sh  support_scripts.py
streamlit_interface/: README.md  all_fields.txt  field_hist_D2.txt  field_to_avoid.txt  interface.py  interface_hist.py  interface_ml.py  support.py  support_interface.py  support_interface_hist.py  support_interface_ml.py  support_ml_app.py  support_plot.py  support_plot_hist.py  support_plot_ml.py
