[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandas_example"
version = "1.0.0"
description = "Federated Learning with Pandas and Flower (Quickstart Example)"
license = "Apache-2.0"
authors = [
    { name = "Alberto Zancanaro", email = "alberto.zancanaro@uni.lu" },
]
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "numpy>=2.0.2",
    "pandas==2.2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "hist_app.server_app:app"
clientapp = "hist_app.client_app:app"

[tool.flwr.app.config]
path_server_config = './config/server_config.toml'

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true # To run with insecure connection
# root-certificates = "certificates/ca.crt" # To run with TLS (secure) connection

[tool.flwr.federations.remote-deployment]
address = "10.240.18.119:9092"
insecure = true  # Disable TLS (not recommended for production)
